Fixed wrapping issues.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -7,6 +7,11 @@
 }
 
 .stopbutton a {
+  display: block;
   text-decoration:none;
   color:black;
+}
+
+.btn-group {
+  white-space: normal;
 }
